# vkcloud

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  message.proto  prepare.sh
cmake/: boost.cmake  grpc.cmake  jsoncpp.cmake
include/vkcloud/: asio_io_service_pool.h  configuration_manager.h  const.h  http_connection.h  logic_system.h  message.grpc.pb.h  message.pb.h  server.h  singleton.h  verify_grpc_client.h
src/: asio_io_service_pool.cc  configuration_manager.cc  http_connection.cc  logic_system.cc  message.grpc.pb.cc  message.pb.cc  server.cc  verify_grpc_client.cc  vkcloud.cc
